--- a/style.css
+++ b/style.css
@@ -149,12 +149,15 @@ html {
 
 .pokemonLine {
     border-bottom: 2px solid var(--accentClrDark);
+    width: 90%;
+    margin: 1rem auto;
 }
 
 .pokemonImage {
     background-color: #e1e1e1;
     box-shadow: 3px 3px 4px var(--inputClrDark);
     border-radius: 30px;
+    padding: 10px;
 }
 
 .pokemonImage img {
@@ -178,4 +181,16 @@ html {
     font-size: 2rem;
     text-align: center;
     margin-left: 10px;
+}
+
+.pokemonCardBody {
+    width: 90%;
+    text-align: center;
+    font-size: 1.25rem;
+    font-weight: 600;
+    background-color: var(--inputClr);
+    padding: 10px;
+    margin: 0 auto;
+    border-radius: 30px;
+    box-shadow: 3px 3px 4px var(--inputClrDark);
 }
